Fixes for weird spacing problems where the browser thought the site's dimensions were always larger than the visible browser window's extents.

--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -23,6 +23,11 @@ a, a:focus, a:active {
   outline: 0;
 }
 
+.row {
+	margin-left: 0px;
+	margin-right: 0px;
+}
+
 .trendingdrug {
 	padding:10px;
 	font-size: 16pt !important;
@@ -61,11 +66,11 @@ a, a:focus, a:active {
 
 .logospace {
 	position: absolute;
-	left: 75px;
+	left: 15px;
 	top:0px;
 	z-index:2;
 	border-radius:50%;
-	left: 15px;
+	vertical-align:middle
 }
 
 .titlespace {
@@ -279,7 +284,7 @@ div .recall-background:hover{
 	height:60px;
   }
   .titlespace {
-    left: 90px;
+    padding-left: 90px;
   }
   
   #recalls {
@@ -313,7 +318,7 @@ div .recall-background:hover{
 	margin-left:auto;
   }
   .titlespace {
-    left: 110px;
+    padding-left: 110px;
   }
 }
 
